--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <div id="root"></div>
     <script src="index.js" type="text/babel"></script>
+    <script src="Header.js" type="text/babel"></script>
 </body>
 </html>
